--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.43.0",
+    "express": "^4.18.2",
+    "ws": "^8.14.2",
     "@supabase/supabase-js": "^2.38.0",
     "dotenv": "^16.3.1"
   },
